code/typescript/Vault/v2/README.md
[![FactSet](https://raw.githubusercontent.com/factset/enterprise-sdk/main/docs/images/factset-logo.svg)](https://www.factset.com)

# Vault client library for JavaScript

[![npm](https://img.shields.io/npm/v/@factset/sdk-vault)](https://www.npmjs.com/package/@factset/sdk-vault)
[![Apache-2 license](https://img.shields.io/badge/license-Apache2-brightgreen.svg)](https://www.apache.org/licenses/LICENSE-2.0)

Allow clients to fetch Vault Analytics through APIs.

This TypeScript/JavaScript package is automatically generated by the [OpenAPI Generator](https://openapi-generator.tech) project:

- API version: 2
- Package version: 0.8.7
- Build package: org.openapitools.codegen.languages.JavascriptClientCodegen

For more information, please visit [https://developer.factset.com/contact](https://developer.factset.com/contact)

## Requirements

* Node.js >= 14

## Installation

### npm

```shell
npm install @factset/sdk-utils @factset/sdk-vault@0.8.7
```

### yarn

```shell
yarn add @factset/sdk-utils @factset/sdk-vault@0.8.7
```

## Usage

1. [Generate authentication credentials](../../../../README.md#authentication).
2. Setup Node.js environment
   1. Install and activate Node.js >=14. If you're using [nvm](https://github.com/nvm-sh/nvm):

      ```sh
      nvm install 16
      nvm use 16
      ```

   2. (optional) [Install yarn](https://yarnpkg.com/getting-started/install).
3. [Install dependencies](#installation).
4. Run the following:


```javascript
const { ApiClient, AccountsApi } = require('@factset/sdk-vault');
const { ConfidentialClient } = require('@factset/sdk-utils');

const apiClient = ApiClient.instance;

// Examples for each supported authentication method are below,
// choose one that satisfies your use case.

// (Preferred) OAuth 2.0: FactSetOAuth2
// See https://github.com/FactSet/enterprise-sdk#oauth-20
// for information on how to create the app-config.json file
// See https://github.com/FactSet/enterprise-sdk-utils-typescript#authentication
// for more information on using the ConfidentialClient class
apiClient.factsetOauth2Client = new ConfidentialClient('/path/to/app-config.json');

// Basic authentication: FactSetApiKey
// See https://github.com/FactSet/enterprise-sdk#api-key
// for information how to create an API key
// const FactSetApiKey = apiClient.authentications['FactSetApiKey'];
// FactSetApiKey.username = 'USERNAME-SERIAL';
// FactSetApiKey.password = 'API-KEY';

const apiInstance = new AccountsApi();
const path = "'Client:Foo/Bar'"; // String | The directory to get the accounts and sub-directories in

// Call api endpoint
apiInstance.getAccounts(path).then(
  data => {

    console.log('API called successfully. Returned data:');
    console.log(data);
  },
  error => {
    console.error(error);
  },
);

```


## Documentation for API Endpoints

All URIs are relative to *https://api-sandbox.factset.com*

Class | Method | HTTP request | Description
------------ | ------------- | ------------- | -------------
*vault.AccountsApi* | [**getAccounts**](docs/AccountsApi.md#getAccounts) | **GET** /analytics/lookups/v2/accounts/{path} | Get accounts and sub-directories in a directory
*vault.CalculationsApi* | [**cancelCalculationById**](docs/CalculationsApi.md#cancelCalculationById) | **DELETE** /analytics/engines/v2/calculations/{id} | Cancel calculation by id
*vault.CalculationsApi* | [**getCalculationStatusById**](docs/CalculationsApi.md#getCalculationStatusById) | **GET** /analytics/engines/v2/calculations/{id} | Get calculation status by id
*vault.CalculationsApi* | [**getCalculationStatusSummaries**](docs/CalculationsApi.md#getCalculationStatusSummaries) | **GET** /analytics/engines/v2/calculations | Get all calculation statuses
*vault.CalculationsApi* | [**runCalculation**](docs/CalculationsApi.md#runCalculation) | **POST** /analytics/engines/v2/calculations | Run calculation
*vault.ComponentsApi* | [**getVaultComponentById**](docs/ComponentsApi.md#getVaultComponentById) | **GET** /analytics/lookups/v2/engines/vault/components/{id} | Get Vault component by id
*vault.ComponentsApi* | [**getVaultComponents**](docs/ComponentsApi.md#getVaultComponents) | **GET** /analytics/lookups/v2/engines/vault/components | Get Vault components
*vault.ConfigurationsApi* | [**getVaultConfigurationById**](docs/ConfigurationsApi.md#getVaultConfigurationById) | **GET** /analytics/lookups/v2/engines/vault/configurations/{id} | Get Vault configuration by id
*vault.ConfigurationsApi* | [**getVaultConfigurations**](docs/ConfigurationsApi.md#getVaultConfigurations) | **GET** /analytics/lookups/v2/engines/vault/configurations | Get Vault configurations
*vault.DatesApi* | [**convertVaultDatesToAbsoluteFormat**](docs/DatesApi.md#convertVaultDatesToAbsoluteFormat) | **GET** /analytics/lookups/v2/engines/vault/dates | Convert Vault dates to absolute format
*vault.DocumentsApi* | [**getVaultDocuments**](docs/DocumentsApi.md#getVaultDocuments) | **GET** /analytics/lookups/v2/engines/vault/documents/{path} | Get Vault documents and sub-directories in a directory
*vault.FrequenciesApi* | [**getVaultFrequencies**](docs/FrequenciesApi.md#getVaultFrequencies) | **GET** /analytics/lookups/v2/engines/vault/frequencies | Get Vault frequencies


## Documentation for Models

 - [vault.AccountDirectories](docs/AccountDirectories.md)
 - [vault.Calculation](docs/Calculation.md)
 - [vault.CalculationStatus](docs/CalculationStatus.md)
 - [vault.CalculationStatusSummary](docs/CalculationStatusSummary.md)
 - [vault.CalculationUnitStatus](docs/CalculationUnitStatus.md)
 - [vault.ComponentAccount](docs/ComponentAccount.md)
 - [vault.ComponentBenchmark](docs/ComponentBenchmark.md)
 - [vault.ComponentSummary](docs/ComponentSummary.md)
 - [vault.ConfigurationAccount](docs/ConfigurationAccount.md)
 - [vault.DateParametersSummary](docs/DateParametersSummary.md)
 - [vault.DocumentDirectories](docs/DocumentDirectories.md)
 - [vault.Frequency](docs/Frequency.md)
 - [vault.PACalculationColumn](docs/PACalculationColumn.md)
 - [vault.PACalculationGroup](docs/PACalculationGroup.md)
 - [vault.PACalculationParameters](docs/PACalculationParameters.md)
 - [vault.PADateParameters](docs/PADateParameters.md)
 - [vault.PAIdentifier](docs/PAIdentifier.md)
 - [vault.PubCalculationParameters](docs/PubCalculationParameters.md)
 - [vault.PubDateParameters](docs/PubDateParameters.md)
 - [vault.PubIdentifier](docs/PubIdentifier.md)
 - [vault.SPARCalculationParameters](docs/SPARCalculationParameters.md)
 - [vault.SPARDateParameters](docs/SPARDateParameters.md)
 - [vault.SPARIdentifier](docs/SPARIdentifier.md)
 - [vault.VaultCalculationParameters](docs/VaultCalculationParameters.md)
 - [vault.VaultComponent](docs/VaultComponent.md)
 - [vault.VaultConfiguration](docs/VaultConfiguration.md)
 - [vault.VaultConfigurationSummary](docs/VaultConfigurationSummary.md)
 - [vault.VaultDateParameters](docs/VaultDateParameters.md)
 - [vault.VaultIdentifier](docs/VaultIdentifier.md)


## Documentation for Authorization



### FactSetApiKey

- **Type**: HTTP basic authentication



### FactSetOAuth2


- **Type**: OAuth
- **Flow**: application
- **Authorization URL**: 
- **Scopes**: N/A


# Contributing

Please refer to the [contributing guide](../../../../CONTRIBUTING.md).

# Copyright

Copyright 2022 FactSet Research Systems Inc

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
