code/typescript/Vault/v3/README.md
[![FactSet](https://raw.githubusercontent.com/factset/enterprise-sdk/main/docs/images/factset-logo.svg)](https://www.factset.com)

# Vault client library for JavaScript

[![API Version](https://img.shields.io/badge/api-v3.16.0-blue)](https://developer.factset.com/api-catalog/vault-api)
[![npm](https://img.shields.io/badge/npm-v3.0.3-orange)](https://www.npmjs.com/package/@factset/sdk-vault/v/3.0.3)
[![Apache-2 license](https://img.shields.io/badge/license-Apache2-brightgreen.svg)](https://www.apache.org/licenses/LICENSE-2.0)

Allow clients to fetch Analytics through APIs.

This TypeScript/JavaScript package is automatically generated by the [OpenAPI Generator](https://openapi-generator.tech) project:

- API version: 3.16.0
- SDK version: 3.0.3
- Build package: com.factset.sdk.codegen.FactSetJavascriptClientCodegen

For more information, please visit [https://developer.factset.com/contact](https://developer.factset.com/contact)

## Requirements

* Node.js >= 18

## Installation

### npm

```shell
npm install @factset/sdk-utils @factset/sdk-vault@3.0.3
```

### yarn

```shell
yarn add @factset/sdk-utils @factset/sdk-vault@3.0.3
```

## Usage

1. [Generate authentication credentials](../../../../README.md#authentication).
2. Setup Node.js environment
   1. Install and activate Node.js >=18. If you're using [nvm](https://github.com/nvm-sh/nvm):

      ```sh
      nvm install 18
      nvm use 18
      ```

   2. (optional) [Install yarn](https://yarnpkg.com/getting-started/install).
3. [Install dependencies](#installation).
4. Run the following:

> [!IMPORTANT]
> The parameter variables defined below are just examples and may potentially contain non valid values. Please replace them with valid values.

### Example Code


```javascript
const { ApiClient, AccountsApi } = require('@factset/sdk-vault');
const { ConfidentialClient } = require('@factset/sdk-utils');

const apiClient = ApiClient.instance;

// Examples for each supported authentication method are below,
// choose one that satisfies your use case.

// (Preferred) OAuth 2.0: FactSetOAuth2
// See https://github.com/FactSet/enterprise-sdk#oauth-20
// for information on how to create the app-config.json file
//
// The confidential client instance should be reused in production environments.
// See https://github.com/FactSet/enterprise-sdk-utils-typescript#authentication
// for more information on using the ConfidentialClient class
apiClient.factsetOauth2Client = new ConfidentialClient('/path/to/app-config.json');

// Basic authentication: FactSetApiKey
// See https://github.com/FactSet/enterprise-sdk#api-key
// for information how to create an API key
// const FactSetApiKey = apiClient.authentications['FactSetApiKey'];
// FactSetApiKey.username = 'USERNAME-SERIAL';
// FactSetApiKey.password = 'API-KEY';

const apiInstance = new AccountsApi();
const path = Client:; // String | The directory to get the accounts and sub-directories in

// Call api endpoint
apiInstance.getAccounts(path).then(
  data => {

    console.log('API called successfully. Returned data:');
    console.log(data);
  },
  error => {
    console.error(error);
  },
);

```


## Using a Proxy

To add a HTTP proxy for the API client, you can set the proxyUrl for the ApiClient instance:

```javascript
const { ApiClient } = require('@factset/sdk-vault');

const apiClient = ApiClient.instance;
apiClient.setProxyUrl('http://username:password@proxy.example.com:8080');
```

## Documentation for API Endpoints

All URIs are relative to *https://api.factset.com*

Class | Method | HTTP request | Description
------------ | ------------- | ------------- | -------------
*vault.AccountsApi* | [**getAccounts**](docs/AccountsApi.md#getAccounts) | **GET** /analytics/lookups/v3/accounts/{path} | Get accounts and sub-directories in a directory
*vault.ComponentsApi* | [**getVaultComponentById**](docs/ComponentsApi.md#getVaultComponentById) | **GET** /analytics/engines/vault/v3/components/{id} | Get Vault component by id
*vault.ComponentsApi* | [**getVaultComponents**](docs/ComponentsApi.md#getVaultComponents) | **GET** /analytics/engines/vault/v3/components | Get Vault components
*vault.ConfigurationsApi* | [**getVaultConfigurationById**](docs/ConfigurationsApi.md#getVaultConfigurationById) | **GET** /analytics/engines/vault/v3/configurations/{id} | Get Vault configuration by id
*vault.ConfigurationsApi* | [**getVaultConfigurations**](docs/ConfigurationsApi.md#getVaultConfigurations) | **GET** /analytics/engines/vault/v3/configurations | Get Vault configurations
*vault.DatesApi* | [**convertVaultDatesToAbsoluteFormat**](docs/DatesApi.md#convertVaultDatesToAbsoluteFormat) | **GET** /analytics/engines/vault/v3/dates | Convert Vault dates to absolute format
*vault.DocumentsApi* | [**getVaultDocuments**](docs/DocumentsApi.md#getVaultDocuments) | **GET** /analytics/engines/vault/v3/documents/{path} | Get Vault documents and sub-directories in a directory
*vault.FrequenciesApi* | [**getVaultFrequencies**](docs/FrequenciesApi.md#getVaultFrequencies) | **GET** /analytics/engines/vault/v3/frequencies | Get Vault frequencies
*vault.VaultCalculationsApi* | [**cancelCalculationById**](docs/VaultCalculationsApi.md#cancelCalculationById) | **DELETE** /analytics/engines/vault/v3/calculations/{id} | Cancel Vault calculation by id
*vault.VaultCalculationsApi* | [**getAllCalculations**](docs/VaultCalculationsApi.md#getAllCalculations) | **GET** /analytics/engines/vault/v3/calculations | Get all calculations
*vault.VaultCalculationsApi* | [**getCalculationParameters**](docs/VaultCalculationsApi.md#getCalculationParameters) | **GET** /analytics/engines/vault/v3/calculations/{id} | Get Vault calculation parameters by id
*vault.VaultCalculationsApi* | [**getCalculationStatusById**](docs/VaultCalculationsApi.md#getCalculationStatusById) | **GET** /analytics/engines/vault/v3/calculations/{id}/status | Get Vault calculation status by id
*vault.VaultCalculationsApi* | [**getCalculationUnitResultById**](docs/VaultCalculationsApi.md#getCalculationUnitResultById) | **GET** /analytics/engines/vault/v3/calculations/{id}/units/{unitId}/result | Get Vault calculation result by id
*vault.VaultCalculationsApi* | [**postAndCalculate**](docs/VaultCalculationsApi.md#postAndCalculate) | **POST** /analytics/engines/vault/v3/calculations | Create and Run Vault calculation
*vault.VaultCalculationsApi* | [**putAndCalculate**](docs/VaultCalculationsApi.md#putAndCalculate) | **PUT** /analytics/engines/vault/v3/calculations/{id} | Create or Update Vault calculation and run it.


## Documentation for Models

 - [vault.AccountDirectories](docs/AccountDirectories.md)
 - [vault.AccountDirectoriesRoot](docs/AccountDirectoriesRoot.md)
 - [vault.CalculationMeta](docs/CalculationMeta.md)
 - [vault.CalculationStatus](docs/CalculationStatus.md)
 - [vault.CalculationStatusMeta](docs/CalculationStatusMeta.md)
 - [vault.CalculationStatusRoot](docs/CalculationStatusRoot.md)
 - [vault.CalculationUnitStatus](docs/CalculationUnitStatus.md)
 - [vault.CalculationUnitStatusMeta](docs/CalculationUnitStatusMeta.md)
 - [vault.CalculationsSummary](docs/CalculationsSummary.md)
 - [vault.CalculationsSummaryRoot](docs/CalculationsSummaryRoot.md)
 - [vault.ClientErrorResponse](docs/ClientErrorResponse.md)
 - [vault.ComponentSummary](docs/ComponentSummary.md)
 - [vault.ComponentSummaryRoot](docs/ComponentSummaryRoot.md)
 - [vault.ConfigurationAccount](docs/ConfigurationAccount.md)
 - [vault.DateParametersSummary](docs/DateParametersSummary.md)
 - [vault.DateParametersSummaryRoot](docs/DateParametersSummaryRoot.md)
 - [vault.DocumentDirectories](docs/DocumentDirectories.md)
 - [vault.DocumentDirectoriesRoot](docs/DocumentDirectoriesRoot.md)
 - [vault.Error](docs/Error.md)
 - [vault.ErrorSource](docs/ErrorSource.md)
 - [vault.Frequency](docs/Frequency.md)
 - [vault.FrequencyRoot](docs/FrequencyRoot.md)
 - [vault.ObjectRoot](docs/ObjectRoot.md)
 - [vault.PaginationInfo](docs/PaginationInfo.md)
 - [vault.PaginationMeta](docs/PaginationMeta.md)
 - [vault.VaultCalculationParameters](docs/VaultCalculationParameters.md)
 - [vault.VaultCalculationParametersRoot](docs/VaultCalculationParametersRoot.md)
 - [vault.VaultComponent](docs/VaultComponent.md)
 - [vault.VaultComponentRoot](docs/VaultComponentRoot.md)
 - [vault.VaultConfiguration](docs/VaultConfiguration.md)
 - [vault.VaultConfigurationRoot](docs/VaultConfigurationRoot.md)
 - [vault.VaultConfigurationSummary](docs/VaultConfigurationSummary.md)
 - [vault.VaultConfigurationSummaryRoot](docs/VaultConfigurationSummaryRoot.md)
 - [vault.VaultDateParameters](docs/VaultDateParameters.md)
 - [vault.VaultIdentifier](docs/VaultIdentifier.md)


## Documentation for Authorization



### FactSetApiKey

- **Type**: HTTP basic authentication



### FactSetOAuth2


- **Type**: OAuth
- **Flow**: application
- **Authorization URL**: 
- **Scopes**: N/A


# Contributing

Please refer to the [contributing guide](../../../../CONTRIBUTING.md).

# Copyright

Copyright 2026 FactSet Research Systems Inc

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
